# agno-docs-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docs/: index.json  openapi.json
.docs/raw/: CONTRIBUTING.md  index.mdx  introduction.mdx
.docs/raw/agent-os/: config.mdx  connecting-your-os.mdx  control-plane.mdx  introduction.mdx  (+3 more)
.docs/snippets/: agent-app-delete-aws-resources.mdx  agent-app-update-production.mdx  agent-os-configuration-reference.mdx  base-reader-reference.mdx  chunking-csv-row.mdx  chunking-custom.mdx  chunking-semantic.mdx  create-agent-api-codebase.mdx  create-agent-app-codebase.mdx  create-agent-infra-aws-codebase.mdx  create-agent-infra-docker-codebase.mdx  create-agent-infra-railway-codebase.mdx  create-aws-resources.mdx  create-venv-step.mdx  db-async-mysql-params.mdx  db-async-postgres-params.mdx  db-async-sqlite-params.mdx  db-dynamodb-params.mdx  db-firestore-params.mdx  db-gcs-params.mdx  db-in-memory-params.mdx  db-json-params.mdx  db-mongodb-params.mdx  db-mysql-params.mdx  db-new-bulk-methods.mdx  db-postgres-params.mdx  db-redis-params.mdx  db-singlestore-params.mdx  db-sqlite-params.mdx  db-surrealdb-params.mdx  delete-aws-resources.mdx  embedder-sentence-transformer-reference.mdx  embedder-vllm-reference.mdx  field-labeled-csv-reader-reference.mdx  gcs-auth-storage.mdx  gcs-remote-content-params.mdx  knowledge-reference.mdx  memory-manager-reference.mdx  pdf-reader-reference.mdx  pptx-reader-reference.mdx  (+19 more)
src/agno_docs_mcp/: __init__.py  __main__.py  app.py  server.py
tests/: __init__.py  test_tools.py
(+1741 files in other folders)
